# signwriting

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: lint.yaml  lint_and_test.yaml  publish-docker.yaml  release.yaml  test.yaml
examples/: spell_and_mouth.py
signwriting/: server.py  types.py
signwriting/fingerspelling/: README.md  fingerspelling.py  server.py  test_fingerspelling.py  visualize_fingerspelling.py
signwriting/fingerspelling/data/: ase.json  bfi.json  bzs.json  csl.json  dsl.json  en-us-ase-asl.txt  fsl.json  gsg.json  hds.json  ise.json  isg.json  isr.json  jsl.json  ko-kr-ko-ksl.txt  ko.json  mfs.json  ncs.json  nsl.json  psr.json  sfb.json  sgg.json  ssp.json  swl.json  tsq.json  vgt.json
signwriting/formats/: fsw_to_sign.py  fsw_to_swu.py  sign_to_fsw.py  swu.py  swu_to_fsw.py  test_fsw_to_sign.py  test_swu.py  test_swu_to_fsw.py
signwriting/hamnosys/: README.md  parallel.json
signwriting/mouthing/: README.md  mouthing.json  mouthing.py  server.py  visualize_mouthing.py
signwriting/primitives/ase/: README.md  dates.py  numbers.py  units.py
signwriting/tokenizer/: __init__.py  base_tokenizer.py  signwriting_normalizer.py  signwriting_tokenizer.py  test_signwriting_normalizer.py  test_signwriting_tokenizer.py
signwriting/tokenizer/graph/: README.md  signwriting_graph_example.py  signwriting_graph_large.py
signwriting/utils/: join_signs.py  test_join_signs.py
signwriting/visualizer/: server.py  test_visalize.py  test_visualize.py  visualize.py
(+8 files in other folders)
