[project]
name = "signwriting"
description = "Python utilities for SignWriting."
version = "0.0.1"
authors = [
    { name = "Amit Moryossef", email = "amitmoryossef@gmail.com" }
]
readme = "README.md"
dependencies = [
    "Pillow"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
    "numpy", # to test visualizer
]
mouthing = [
    # For IPA transliteration
    "epitran",
    "g2pk"
]
server = [
    # For API server
    "flask",
    "Flask-RESTful",
]

[tool.yapf]
based_on_style = "google"
column_limit = 120

[tool.pylint]
max-line-length = 120
disable = [
    "C0103", # Invalid variable name (doesn't conform to UPPER_CASE naming style)
    "C0114", # Missing module docstring
    "C0115", # Missing class docstring
    "C0116", # Missing function or method docstring
]
good-names = ["i", "f", "x", "y"]

[tool.setuptools]
packages = [
    "signwriting",
    "signwriting.formats",
    "signwriting.tokenizer",
    "signwriting.utils",
    "signwriting.visualizer",
    "signwriting.fingerspelling",
    "signwriting.mouthing"
]

[tool.setuptools.package-data]
signwriting = ["**/*.ttf", "**/*.txt", "**/*.json"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["signwriting"]
